@@ -227,6 +227,11 @@ CONFIGURE_FILE( ${OPENJPEG_SOURCE_DIR}/CMake/OpenJPEGConfig.cmake.in
 INSTALL( FILES ${OPENJPEG_BINARY_DIR}/OpenJPEGConfig.cmake
   DESTINATION ${OPENJPEG_INSTALL_PACKAGE_DIR}
 )
+# install CHANGES and LICENSE
+INSTALL(
+  FILES       CHANGES 
+              LICENSE
+  DESTINATION ${OPENJPEG_INSTALL_DOC_DIR})
 #
 IF(UNIX OR CYGWIN)
   SET(CMAKE_INCLUDE_PATH /usr/include /usr/local/include /opt/include 
